--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
     <link rel="shortcut icon" href="asset/img/4geeks.ico" />
   </head>
   <body>
-    <div class="container-fluid text-center">
+    <div class="container">
       <div class="card">
         <div class="icono-top">♥️️</div>
         <span class="number">8</span>
